--- a/nadi-web/src/components/header/Header.astro
+++ b/nadi-web/src/components/header/Header.astro
@@ -1,81 +1,319 @@
 ---
 import "./Header.css";
+import "../../styles/index.css";
 import HeaderButton from "./HeaderButton.astro";
 ---
 
 <header>
-  <nav>
-    <ul>
-      <div class="logo">
-        <img src="../../../public/img/icons/psicologia.png" alt="logo.webp">
-        <p>PsicoConecta</p>
-      </div>
-      <div class="buttons">
-        <li>
-          <HeaderButton href="/">
-            <svg
-              slot="before"
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-              fill="none"
-              stroke="currentColor"
-              stroke-width="2"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-            >
-              <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-              <path d="M5 12l-2 0l9 -9l9 9l-2 0"></path>
-              <path d="M5 12v7a2 2 0 0 0 2 2h10a2 2 0 0 0 2 -2v-7"></path>
-              <path d="M9 21v-6a2 2 0 0 1 2 -2h2a2 2 0 0 1 2 2v6"></path>
-            </svg>
-            Home
-          </HeaderButton>
-        </li>
-        <li>
-          <HeaderButton href="/aboutMe">
-            <svg
-              slot="before"
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-              fill="none"
-              stroke="currentColor"
-              stroke-width="2"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              class=""
-            >
-              <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-              <path d="M3 12a9 9 0 1 0 18 0a9 9 0 0 0 -18 0"></path>
-              <path d="M12 9h.01"></path><path d="M11 12h1v4h1"></path>
-            </svg>
-            Sobre Mi
-          </HeaderButton>
-        </li>
-        <li>
-          <HeaderButton href="/services">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-              fill="none"
-              stroke="currentColor"
-              stroke-width="2"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              class="icon icon-tabler icons-tabler-outline icon-tabler-heart"
-            >
-              <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-              <path
-                d="M19.5 12.572l-7.5 7.428l-7.5 -7.428a5 5 0 1 1 7.5 -6.566a5 5 0 1 1 7.5 6.572"
-              ></path>
-            </svg>
-            Servicios
-          </HeaderButton>
-        </li>
-      </div>
+  <nav class="site-nav" id="siteNav">
+    <div class="nav-left logo">
+      <img src="../../../public/img/icons/psicologia.png" alt="logo.webp" />
+      <p>PsicoConecta</p>
+    </div>
+
+    <ul class="nav-items" id="navItems">
+      <li>
+        <HeaderButton href="/">
+          <svg
+            slot="before"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          >
+            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+            <path d="M5 12l-2 0l9 -9l9 9l-2 0"></path>
+            <path d="M5 12v7a2 2 0 0 0 2 2h10a2 2 0 0 0 2 -2v-7"></path>
+            <path d="M9 21v-6a2 2 0 0 1 2 -2h2a2 2 0 0 1 2 2v6"></path>
+          </svg>
+          Home
+        </HeaderButton>
+      </li>
+      <li>
+        <HeaderButton href="/aboutMe">
+          <svg
+            slot="before"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          >
+            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+            <path d="M3 12a9 9 0 1 0 18 0a9 9 0 0 0 -18 0"></path>
+            <path d="M12 9h.01"></path><path d="M11 12h1v4h1"></path>
+          </svg>
+          Sobre Mi
+        </HeaderButton>
+      </li>
+      <li>
+        <HeaderButton href="/services">
+          <svg
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          >
+            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+            <path d="M19.5 12.572l-7.5 7.428l-7.5 -7.428a5 5 0 1 1 7.5 -6.566a5 5 0 1 1 7.5 6.572"></path>
+          </svg>
+          Servicios
+        </HeaderButton>
+      </li>
+      <li class="cita contacto">
+        <HeaderButton href="/contact">
+          <svg
+            width="24px"
+            height="24px"
+            stroke="currentColor"
+            viewBox="0 0 32 32"
+            fill="none"
+            id="icons"
+            version="1.0"
+            xml:space="preserve"
+            xmlns="http://www.w3.org/2000/svg"
+            xmlns:xlink="http://www.w3.org/1999/xlink"
+            ><rect
+              class="st0"
+              height="18"
+              id="XMLID_27_"
+              width="26"
+              x="3"
+              y="8"></rect><line
+              class="st0"
+              id="XMLID_79_"
+              x1="7"
+              x2="7"
+              y1="5"
+              y2="11"></line><line
+              class="st0"
+              id="XMLID_80_"
+              x1="13"
+              x2="13"
+              y1="5"
+              y2="11"></line><line
+              class="st0"
+              id="XMLID_82_"
+              x1="19"
+              x2="19"
+              y1="5"
+              y2="11"></line><line
+              class="st0"
+              id="XMLID_83_"
+              x1="25"
+              x2="25"
+              y1="5"
+              y2="11"></line><line
+              class="st0"
+              id="XMLID_122_"
+              x1="13"
+              x2="13"
+              y1="13"
+              y2="15"></line><line
+              class="st0"
+              id="XMLID_123_"
+              x1="19"
+              x2="19"
+              y1="13"
+              y2="15"></line><line
+              class="st0"
+              id="XMLID_124_"
+              x1="25"
+              x2="25"
+              y1="13"
+              y2="15"></line><line
+              class="st0"
+              id="XMLID_128_"
+              x1="7"
+              x2="7"
+              y1="17"
+              y2="19"></line><line
+              class="st0"
+              id="XMLID_129_"
+              x1="13"
+              x2="13"
+              y1="17"
+              y2="19"></line><line
+              class="st0"
+              id="XMLID_144_"
+              x1="7"
+              x2="7"
+              y1="21"
+              y2="23"></line><line
+              class="st0"
+              id="XMLID_143_"
+              x1="13"
+              x2="13"
+              y1="21"
+              y2="23"></line><line
+              class="st0"
+              id="XMLID_86_"
+              x1="19"
+              x2="19"
+              y1="17"
+              y2="19"></line><line
+              class="st0"
+              id="XMLID_145_"
+              x1="19"
+              x2="19"
+              y1="21"
+              y2="23"></line><line
+              class="st0"
+              id="XMLID_130_"
+              x1="25"
+              x2="25"
+              y1="17"
+              y2="19"></line><g id="XMLID_386_"></g></svg>
+          ¿Hablamos?
+        </HeaderButton>
+      </li>
     </ul>
+
+    <div class="nav-right">
+      <div class="contact-outer">
+        <HeaderButton href="/contact" class="contact-button">
+          <svg
+            width="24px"
+            height="24px"
+            stroke="currentColor"
+            viewBox="0 0 32 32"
+            fill="none"
+            id="icons"
+            version="1.0"
+            xml:space="preserve"
+            xmlns="http://www.w3.org/2000/svg"
+            xmlns:xlink="http://www.w3.org/1999/xlink"
+            ><rect
+              class="st0"
+              height="18"
+              id="XMLID_27_"
+              width="26"
+              x="3"
+              y="8"></rect><line
+              class="st0"
+              id="XMLID_79_"
+              x1="7"
+              x2="7"
+              y1="5"
+              y2="11"></line><line
+              class="st0"
+              id="XMLID_80_"
+              x1="13"
+              x2="13"
+              y1="5"
+              y2="11"></line><line
+              class="st0"
+              id="XMLID_82_"
+              x1="19"
+              x2="19"
+              y1="5"
+              y2="11"></line><line
+              class="st0"
+              id="XMLID_83_"
+              x1="25"
+              x2="25"
+              y1="5"
+              y2="11"></line><line
+              class="st0"
+              id="XMLID_122_"
+              x1="13"
+              x2="13"
+              y1="13"
+              y2="15"></line><line
+              class="st0"
+              id="XMLID_123_"
+              x1="19"
+              x2="19"
+              y1="13"
+              y2="15"></line><line
+              class="st0"
+              id="XMLID_124_"
+              x1="25"
+              x2="25"
+              y1="13"
+              y2="15"></line><line
+              class="st0"
+              id="XMLID_128_"
+              x1="7"
+              x2="7"
+              y1="17"
+              y2="19"></line><line
+              class="st0"
+              id="XMLID_129_"
+              x1="13"
+              x2="13"
+              y1="17"
+              y2="19"></line><line
+              class="st0"
+              id="XMLID_144_"
+              x1="7"
+              x2="7"
+              y1="21"
+              y2="23"></line><line
+              class="st0"
+              id="XMLID_143_"
+              x1="13"
+              x2="13"
+              y1="21"
+              y2="23"></line><line
+              class="st0"
+              id="XMLID_86_"
+              x1="19"
+              x2="19"
+              y1="17"
+              y2="19"></line><line
+              class="st0"
+              id="XMLID_145_"
+              x1="19"
+              x2="19"
+              y1="21"
+              y2="23"></line><line
+              class="st0"
+              id="XMLID_130_"
+              x1="25"
+              x2="25"
+              y1="17"
+              y2="19"></line><g id="XMLID_386_"></g>
+          </svg>
+          ¿Hablamos?
+        </HeaderButton>
+      </div>
+
+      <button id="navToggle" class="hamburger" aria-label="Abrir menú">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
+    </div>
+
+    
   </nav>
+
+  <script>
+    const nav = document.getElementById('siteNav');
+    const toggle = document.getElementById('navToggle');
+    const items = document.getElementById('navItems');
+    toggle?.addEventListener('click', () => {
+      nav.classList.toggle('open');
+      toggle.classList.toggle('open');
+    });
+    // close menu when clicking a link (use event delegation)
+    items?.addEventListener('click', (e) => {
+      if (e.target instanceof Element && e.target.closest('a')) {
+        nav.classList.remove('open');
+        toggle.classList.remove('open');
+      }
+    });
+  </script>
 </header>
