--- a/nadi-web/src/layouts/Layout.astro
+++ b/nadi-web/src/layouts/Layout.astro
@@ -8,6 +8,8 @@ import '@fontsource/lato';
 import Header from '../components/header/Header.astro';
 import Footer from '../components/footer/Footer.astro';
 import '../styles/reset.css';
+import { Image } from "astro:assets";
+import backGroundImg from "../../public/img/backGroundImg.webp";
 ---
 
 <!doctype html>
@@ -43,7 +45,9 @@ import '../styles/reset.css';
 	}
 	html {
 		font-family: 'Open Sans',system-ui, sans-serif;
-		background: #C3ACCE;
+		background-image: url('/img/backGroundImg.webp'); /* Ruta directa desde la raíz */
+        background-size: cover;
+        background-position: center;
 		color: #fff;
 	}
 	main{
