--- a/nadi-web/src/layouts/Layout.astro
+++ b/nadi-web/src/layouts/Layout.astro
@@ -43,8 +43,8 @@ import backGroundImg from "../../public/img/backGroundImg.webp";
 		);
 		
 	}
-	html {
-		font-family: 'Open Sans',system-ui, sans-serif;
+	html, body {
+		font-family: 'Alegreya','Lato', system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, "Noto Sans", "Segoe UI Emoji", "Segoe UI Symbol";
 		background-image: url('/img/backGroundImg.webp'); /* Ruta directa desde la raíz */
         background-size: cover;
         background-position: center;
