--- a/nadi-web/src/styles/about.css
+++ b/nadi-web/src/styles/about.css
@@ -1,10 +1,55 @@
-h1.title.about-me{
+.about {
+    margin: 0 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    /* width: 100vw; */
+    /* position: absolute; */
+    z-index: 3;
+    background-color: rgba(138, 43, 226, 0.3);
+    border-radius: 20px;
+}
+
+.info {
+   padding: 10px 0;
+}
+
+.info .title {
+    padding-left: 1rem;
+    color: black;
+}
+
+.info .description {
+    padding-top: 1rem;
+    padding-left: 1rem;
+}
+
+.imagen {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    overflow: hidden;
+    /* esto es clave */
+}
+
+.avatar-about-me {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+
+h1.title.about-me {
     font-size: 2.5rem;
     color: #333333;
     text-align: center;
     margin-bottom: 20px;
 }
-.personal-info{
+
+.personal-info {
     font-size: 1.2rem;
     line-height: 1.6;
     color: #666666;
@@ -13,6 +58,12 @@ h1.title.about-me{
 }
 
 @media (max-width: 768px) {
-    h1.title.about-me{ font-size: 2rem; }
-    .personal-info{ font-size: 1rem; padding: 0 1rem; }
+    h1.title.about-me {
+        font-size: 2rem;
+    }
+
+    .personal-info {
+        font-size: 1rem;
+        padding: 0 1rem;
+    }
 }
