Corregida ruta img logo

--- a/nadi-web/src/components/header/Header.astro
+++ b/nadi-web/src/components/header/Header.astro
@@ -7,7 +7,7 @@ import HeaderButton from "./HeaderButton.astro";
 <header>
   <nav class="site-nav" id="siteNav">
     <div class="nav-left logo">
-      <img src="../../../public/img/icons/psicologia.png" alt="logo.webp" />
+      <img src="/img/icons/psicologia.png" alt="PsicoConecta logo" />
       <p>PsicoConecta</p>
     </div>
 
